# news_rag

./: .env  .gitignore  README.md  main.py  prd.txt  pyproject.toml  reset_db.py
app/: crawler.py  database.py  indexing.py  models.py  rag_graph.py  scheduler.py
app/routers/: news.py  rag.py
doc/: trd.txt
